--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,7 +111,7 @@ body {
         90deg,
         rgba(0, 0, 0, 1) 0%,
         rgba(0, 0, 0, 1) 70%,
-        rgba(0, 0, 0, 0) 100%
+        transparent 100%
     );
 }
 
@@ -126,14 +126,14 @@ body {
 
 @layer utilities {
     .mr-break-out {
-        @apply max-w-screen -mr-[calc((50vw-var(--scrollbar)/2)-50%)];
+        @apply max-w-6xl -mr-[calc((50vw-var(--scrollbar)/2)-50%)];
     }
 
     .ml-break-out {
-        @apply max-w-screen -ml-[calc((50vw-var(--scrollbar)/2)-50%)];
+        @apply max-w-6xl -ml-[calc((50vw-var(--scrollbar)/2)-50%)];
     }
 
     .mx-break-out {
-        @apply max-w-screen -mx-[calc((50vw-var(--scrollbar)/2)-50%)];
+        @apply max-w-6xl -mx-[calc((50vw-var(--scrollbar)/2)-50%)];
     }
 }
