--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
-@config "../../tailwind.config.js";
+@plugin './hero.ts';
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
 
 @property --scrollbar {
     syntax: '<length>';
