--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,12 +3,6 @@
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
 
-@property --scrollbar {
-    syntax: '<length>';
-    inherits: true;
-    initial-value: 0px;
-}
-
 .light,
 :root,
 [data-theme='light'] {
@@ -86,6 +80,7 @@
     --color-danger-foreground: #fff;
     --color-danger: #f31260;
 
+    --radius-none: 0;
     --radius-5xl: 2.5rem;
 }
 
@@ -96,27 +91,4 @@ html {
 
 body {
     --scrollbar: calc(100vw - 100cqw);
-}
-
-@utility section-mask-x {
-    mask-image: linear-gradient(
-        90deg,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 1) 30%,
-        rgba(0, 0, 0, 1) 70%,
-        rgba(0, 0, 0, 0) 100%
-    );
-}
-
-@utility section-mask-r {
-    mask-image: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 70%, transparent 100%);
-}
-
-@utility section-mask-l {
-    mask-image: linear-gradient(
-        90deg,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 1) 30%,
-        rgba(0, 0, 0, 1) 100%
-    );
 }
